Fixed alignment and size issues with produce text overlay.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -81,22 +81,22 @@ html, body {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
+	justify-content: center;
 }
 /*Do something like this for mobile version*/
 /*.produce-card{*/
 	/*width:100px;*/
 /*}*/
 .produce-card{
-	width:20%;
+	width: 14rem;
 	padding: 1rem;
 	border: none;
 }
 .produce-card .card-title{
-	/*background-color: rgba(18, 13, 8, 0.5);*/
 	background-color: rgba(255,248,242, 0.9);
-	color: #120d08 ;
+	color: #120d08;
 	position: absolute;
-	bottom: 0;
+	bottom: -0.375rem;
 	left: 0;
 	margin: 0 auto;
 	padding: 0.5rem 0;
@@ -104,14 +104,15 @@ html, body {
 	text-align: center;
 	text-transform: capitalize;
 }
+
 .card-img-overlay {
 	position: absolute;
 	top: 0;
 	right: 0;
 	bottom: 10%;
 	left: 0;
-	padding: 1.25rem;
-	width: 80%;
+	/* padding: 1.25rem; */
+	width: 12rem;
 	margin: 0 auto;
 }
 .selected{
